# MagicAI

./: ImageProcessingWithT41.pptx  README.md  build.sh  buildarm64.sh  buildt31.sh  buildx64.sh
doc/: README.md  img.md  wifi.sh
src/base/src/: filesystem.cpp  platform.cpp  util.cpp
src/base/token/: Encoders.h
src/broadcast/: README.md
src/broadcast/compilertest/: test.cpp
src/broadcast/include/: BitVector.h  Boolean.h  EncoderFactory.h  NULLDecoder.h  NULLEncoder.h  Settings.h  codec.h  constant.h  framefilter.h  live.h  livethread.h  muxer.h  muxframe.h  recordingthread.h  restApi.h  tools.h
src/broadcast/main/: CMakeLists.txt  CMakeListsT31.txt  CMakeLists_x64.txt  Makefile  Makefile_arm64  Makefile_t31  Makefile_x64  Streamer.cpp  buildenv540uclibc.sh  buildx64.sh  config.js  env.sh
src/broadcast/main/frames/h264/: frame-001.h264  frame-003.h264  frame-004.h264  frame-005.h264  frame-006.h264  frame-007.h264  frame-008.h264  frame-009.h264  frame-010.h264  frame-011.h264  frame-012.h264  frame-013.h264  frame-014.h264  frame-015.h264  frame-016.h264  frame-017.h264  frame-018.h264  frame-019.h264  frame-020.h264  frame-021.h264  frame-022.h264  frame-023.h264  frame-024.h264  frame-025.h264  frame-026.h264  frame-027.h264  frame-028.h264  frame-029.h264  frame-030.h264  frame-031.h264  frame-032.h264  frame-033.h264  frame-034.h264  frame-035.h264  frame-036.h264  frame-037.h264  frame-038.h264  frame-039.h264  frame-040.h264  frame-041.h264  (+199 more)
src/broadcast/main/libuv/: CMakeLists.txt  README.md
src/broadcast/main/webrtc/: CMakeLists.txt  CMakeLists_arm64.txt  CMakeLists_t31.txt  CMakeLists_x64.txt  buildarm64.sh  buildenv540uclibc.sh  buildx64.sh  patch_odler.txt  patch_t31_full.txt
src/broadcast/main/webrtc/src/api/: create_peerconnection_factory.cc
src/broadcast/main/webrtc/src/api/audio/: echo_canceller3_config.cc  echo_canceller3_factory.cc
src/broadcast/main/webrtc/src/api/audio_codecs/: audio_codec_pair_id.cc  audio_decoder_factory.h  audio_encoder_factory_template.h  builtin_audio_decoder_factory.cc  builtin_audio_encoder_factory.cc
src/broadcast/main/webrtc/src/api/video/: builtin_video_bitrate_allocator_factory.cc
src/broadcast/main/webrtc/src/audio/: audio_level.cc  audio_send_stream.cc  audio_state.cc  audio_transport_impl.cc  audio_transport_impl.h  channel_receive.cc  channel_send.cc
src/broadcast/main/webrtc/src/call/: call.cc  call_factory.cc  rtp_transport_controller_send.cc
src/broadcast/main/webrtc/src/common_audio/signal_processing/include/: signal_processing_library.h
src/broadcast/main/webrtc/src/common_video/: video_frame_buffer.cc
src/broadcast/main/webrtc/src/media/base/: codec.cc
src/broadcast/main/webrtc/src/media/engine/: apm_helpers.cc  webrtc_media_engine_defaults.cc  webrtc_voice_engine.cc
src/broadcast/main/webrtc/src/modules/audio_coding/acm2/: acm_receiver.cc  acm_receiver.h  audio_coding_module.cc
src/broadcast/main/webrtc/src/modules/audio_coding/audio_network_adaptor/: event_log_writer.cc
src/broadcast/main/webrtc/src/modules/audio_coding/include/: audio_coding_module.h
src/broadcast/main/webrtc/src/modules/audio_coding/neteq/: accelerate.cc  decision_logic.cc  decoder_database.cc  decoder_database.h  expand.cc  neteq_impl.cc  neteq_impl.h  normal.cc  normal.h  red_payload_splitter.h  time_stretch.cc  time_stretch.h
src/broadcast/main/webrtc/src/modules/audio_device/: audio_device_buffer.cc  audio_device_impl.cc
src/broadcast/main/webrtc/src/modules/audio_processing/: audio_processing_impl.cc  splitting_filter.cc
src/broadcast/main/webrtc/src/modules/audio_processing/aec3/: clockdrift_detector.h
src/broadcast/main/webrtc/src/modules/audio_processing/agc/: agc.cc  agc.h
src/broadcast/main/webrtc/src/modules/audio_processing/include/: audio_processing.h
src/broadcast/main/webrtc/src/modules/audio_processing/transient/: transient_suppressor.cc
src/broadcast/main/webrtc/src/modules/bitrate_controller/: send_side_bandwidth_estimation.cc
src/broadcast/main/webrtc/src/modules/congestion_controller/goog_cc/: alr_detector.cc  delay_based_bwe.cc  probe_bitrate_estimator.cc  probe_controller.cc
src/broadcast/main/webrtc/src/modules/pacing/: bitrate_prober.cc
src/broadcast/main/webrtc/src/modules/rtp_rtcp/source/: rtcp_sender.cc  rtp_sender.cc
src/broadcast/main/webrtc/src/modules/video_coding/: video_codec_initializer.cc
src/broadcast/main/webrtc/src/p2p/base/: basic_packet_socket_factory.cc  connection.cc  connection.h  datagram_dtls_adaptor.cc  dtls_transport.cc  no_op_dtls_transport.cc  p2p_transport_channel.cc  p2p_transport_channel.h  port.cc  port.h
src/broadcast/main/webrtc/src/pc/: peer_connection.cc  peer_connection_factory.cc
src/broadcast/main/webrtc/src/rtc_base/: network.cc  openssl_certificate.cc  openssl_identity.cc  ssl_certificate.cc
src/broadcast/main/webrtc/src/rtc_base/system/: arch.h
src/broadcast/main/webrtc/src/video/: video_receive_stream.cc  video_stream_encoder.cc
src/broadcast/signalserver/: index.html  index.js  package.json  test.html
src/broadcast/src/: EncoderFactory.cpp  G711.cpp  G711Encoder.cpp  H264Framer.cpp  NULLDecoder.cpp  NULLEncoder.cpp  Settings.cpp  VideoDecoder.cpp  VideoEncoder.cpp  audiopacketmodule.cpp  audiopacketmodule.cpp_unused  fakeaudiodevicemodule.cpp  fmp4.cpp  framefilter.cpp  live.cpp  livethread.cpp  localAudioSouce.cpp  multiplexmediacapturer.cpp  muxer.cpp  muxframe.cpp  peer.cpp  util.cpp  (+7 more)
src/libuv/: CMakeLists.txt  README.md
src/mbedtls/: CMakeLists.txt  buildx64.sh
src/openssl/: readme.txt
src/sfu/: ANDROID.md  CMakeLists.txt  README.md  buildenv540uclibc.sh  buildx64.sh  config.js  sfuserver.gyp
src/sfu/sfuserver/: CMakeLists.txt  Makefile  buildx64.sh  main.cpp
src/sfu/src/: DtlsTransport.cpp
src/sfu/webRTCApp/: config.js
src/webrtc/: CMakeLists.txt  CMakeLists_t31.txt  CMakeLists_x64.txt  buildarm64.sh  buildenv540uclibc.sh  buildx64.sh  final.patch  patch_t31.txt  patch_t31_full.txt  thirdparty.patch  webrtc.gradle
src/webrtcserver/: CMakeLists.txt  Makefile  buildx64.sh
test/: deadcode.cpp
(+421 files in other folders)
